Fixed chat now aligned to the last messages

--- a/ClientApp/src/app/components/game/chat/chat.component.scss
+++ b/ClientApp/src/app/components/game/chat/chat.component.scss
@@ -1,6 +1,8 @@
 :host{
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: flex-end;
 }
 
 .chat-entry {
